# GraphicsProgramming

./: .clangd  CMakeLists.txt  Makefile  README.md  compile_commands.json  compile_flags.txt
include/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: drawable.h  engine.cpp  engine.h  game_object.h  glad.c  input.h  io.h  main.cpp  main2.cpp  movement.h  renderer.h  scene.h  shader.cpp  shader.h  test.h  utils.h
